# TS_Final_Assignment

./: Assignment_1.ipynb  LICENSE  README.md  pyproject.toml
data/: 10_Monthly traffic fatalities in Ontario 1960-1974.csv
docs/: Chapter1_FundamentalsOfTimeSeries.html  Chapter2_Forecasting_PrinciplesAndMethods.html  Chapter3_StatisticalModelsForTimeSeries.html  index.html
notebooks/: 01_EDA.ipynb  03_EXOGS.ipynb
notebooks/aux_notebooks/: Chapter1_FundamentalsOfTimeSeries.ipynb  Chapter2.5.3_Excercise2.2.ipynb  Chapter2.5.6_Excercise2.3.ipynb  Chapter2_Forecasting_PrinciplesAndMethods.ipynb  Chapter3_StatisticalModelsForTimeSeries.ipynb  Untitled.ipynb
scripts/: create_nb_1.py  create_nb_2.py  eda.py
task/: final_assignment.md
